Fix alignment of genome location for RNA genes

--- a/frontend/src/app/gene-details/gene-details.component.css
+++ b/frontend/src/app/gene-details/gene-details.component.css
@@ -38,8 +38,8 @@
   text-align: center;
 }
 
-.genomic-location table {
-  margin: 0;
+.genomic-location {
+  margin: 0 !important;
 }
 
 .genomic-location td {
